wxc/include/ewxw/wxc_glue.h



/* wxPageSetupDialog */
TClassDefExtend(wxPageSetupDialog,wxDialog)
TClass(wxPageSetupDialog) wxPageSetupDialog_Create( TClass(wxWindow) parent, TClass(wxPageSetupDialogData) data );

void       wxPageSetupDialog_GetPageSetupData( TSelf(wxPageSetupDialog) _obj, TClassRef(wxPageSetupDialogData) _ref );


/* wxPageSetupDialogData */
TClassDefExtend(wxPageSetupDialogData,wxObject)
void       wxPageSetupDialogData_Assign( TSelf(wxPageSetupDialogData) _obj, TClassRef(wxPageSetupDialogData) data );

void       wxPageSetupDialogData_AssignData( TSelf(wxPageSetupDialogData) _obj, TClass(wxPrintData) printData );

void       wxPageSetupDialogData_CalculateIdFromPaperSize( TSelf(wxPageSetupDialogData) _obj );

void       wxPageSetupDialogData_CalculatePaperSizeFromId( TSelf(wxPageSetupDialogData) _obj );

TClass(wxPageSetupDialogData) wxPageSetupDialogData_Create(  );

TClass(wxPageSetupDialogData) wxPageSetupDialogData_CreateFromData( TClass(wxPrintData) printData );

void       wxPageSetupDialogData_Delete( TSelf(wxPageSetupDialogData) _obj );

void       wxPageSetupDialogData_EnableHelp( TSelf(wxPageSetupDialogData) _obj, TBool flag );

void       wxPageSetupDialogData_EnableMargins( TSelf(wxPageSetupDialogData) _obj, TBool flag );

void       wxPageSetupDialogData_EnableOrientation( TSelf(wxPageSetupDialogData) _obj, TBool flag );

void       wxPageSetupDialogData_EnablePaper( TSelf(wxPageSetupDialogData) _obj, TBool flag );

void       wxPageSetupDialogData_EnablePrinter( TSelf(wxPageSetupDialogData) _obj, TBool flag );

TBool      wxPageSetupDialogData_GetDefaultInfo( TSelf(wxPageSetupDialogData) _obj );

TBool      wxPageSetupDialogData_GetDefaultMinMargins( TSelf(wxPageSetupDialogData) _obj );

TBool      wxPageSetupDialogData_GetEnableHelp( TSelf(wxPageSetupDialogData) _obj );

TBool      wxPageSetupDialogData_GetEnableMargins( TSelf(wxPageSetupDialogData) _obj );

TBool      wxPageSetupDialogData_GetEnableOrientation( TSelf(wxPageSetupDialogData) _obj );

TBool      wxPageSetupDialogData_GetEnablePaper( TSelf(wxPageSetupDialogData) _obj );

TBool      wxPageSetupDialogData_GetEnablePrinter( TSelf(wxPageSetupDialogData) _obj );

void       wxPageSetupDialogData_GetMarginBottomRight( TSelf(wxPageSetupDialogData) _obj, TPointOutVoid(_x,_y) );

void       wxPageSetupDialogData_GetMarginTopLeft( TSelf(wxPageSetupDialogData) _obj, TPointOutVoid(_x,_y) );

void       wxPageSetupDialogData_GetMinMarginBottomRight( TSelf(wxPageSetupDialogData) _obj, TPointOutVoid(_x,_y) );

void       wxPageSetupDialogData_GetMinMarginTopLeft( TSelf(wxPageSetupDialogData) _obj, TPointOutVoid(_x,_y) );

int        wxPageSetupDialogData_GetPaperId( TSelf(wxPageSetupDialogData) _obj );

void       wxPageSetupDialogData_GetPaperSize( TSelf(wxPageSetupDialogData) _obj, TSizeOutVoid(_w,_h) );

void       wxPageSetupDialogData_GetPrintData( TSelf(wxPageSetupDialogData) _obj, TClassRef(wxPrintData) _ref );

void       wxPageSetupDialogData_SetDefaultInfo( TSelf(wxPageSetupDialogData) _obj, TBool flag );

void       wxPageSetupDialogData_SetDefaultMinMargins( TSelf(wxPageSetupDialogData) _obj, int flag );

void       wxPageSetupDialogData_SetMarginBottomRight( TSelf(wxPageSetupDialogData) _obj, TPoint(x,y) );

void       wxPageSetupDialogData_SetMarginTopLeft( TSelf(wxPageSetupDialogData) _obj, TPoint(x,y) );

void       wxPageSetupDialogData_SetMinMarginBottomRight( TSelf(wxPageSetupDialogData) _obj, TPoint(x,y) );

void       wxPageSetupDialogData_SetMinMarginTopLeft( TSelf(wxPageSetupDialogData) _obj, TPoint(x,y) );

void       wxPageSetupDialogData_SetPaperId( TSelf(wxPageSetupDialogData) _obj, void* id );

void       wxPageSetupDialogData_SetPaperSize( TSelf(wxPageSetupDialogData) _obj, TSize(w,h) );

void       wxPageSetupDialogData_SetPaperSizeId( TSelf(wxPageSetupDialogData) _obj, int id );

void       wxPageSetupDialogData_SetPrintData( TSelf(wxPageSetupDialogData) _obj, TClass(wxPrintData) printData );


/* wxPrintDialog */
TClassDefExtend(wxPrintDialog,wxDialog)
TClass(wxPrintDialog) wxPrintDialog_Create( TClass(wxWindow) parent, TClass(wxPrintDialogData) data );

TClass(wxDC)         wxPrintDialog_GetPrintDC( TSelf(wxPrintDialog) _obj );

void       wxPrintDialog_GetPrintData( TSelf(wxPrintDialog) _obj, TClassRef(wxPrintData) _ref );